--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quartett</title>
+  <title>Quartett - Home</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/x-icon" href="favicon/favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
 </head>
 <body>
+  <div class="container">
   <nav>
-    <h1>Quartett</h1>
+    <a href="/">Quartett</a>
     <div class="links">
-    <a href="">Link1</a><a href="">Link2</a><a href="">Link3</a><a href="">Link4</a>
-  </div>
+      <a href="/pages/religion.html">Religion</a><a href="">Link2</a><a href="">Link3</a><a href="">Link4</a>
+    </div>
   </nav>
   <header class="flex-column">
     <h2>
@@ -21,8 +22,11 @@
     </h2>
     <h2>Poland together form the <span class="light-blue-text">Quartett</span></h2> 
   </header>
-  <div class="light-blue-triangle"></div>
-  <div class="light-blue-square">
-  </div>
+  <article class="text-box">
+    <p>
+      Lorem ipsum
+    </p>
+  </article>
+</div>
 </body>
 </html>
