--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
   <nav>
     <a href="/">Quartett</a>
     <div class="links">
-      <a href="/pages/religion.html">Religion</a><a href="">Link2</a><a href="">Link3</a><a href="">Link4</a>
+      <a href="/">Home</a>
+      <a href="/pages/religion.html">Religion</a>
+      <a href="/pages/art.html">Art</a>
+      <a href="/pages/social.html">Social Studies</a>
+      <a href="/pages/international.html">International Collaboration</a>
     </div>
   </nav>
   <header class="flex-column">
     <h2>
-      Germany, Czech Republic, France & 
-    </h2>
-    <h2>Poland together form the <span class="light-blue-text">Quartett</span></h2> 
+      Germany, Czech Republic, France & </br>
+    Poland together form the <span class="light-blue-text">Quartett</span></h2> 
   </header>
   <article class="text-box">
     <p>
-      Lorem ipsum
-    </p>
+      This project will show you the potential future of quartett, that we hope will come true. You will learn about some basic information, but you will also listen to some interviews with people who have something to say about that matter in particular. You are going to learn about religion, art, languages and more.</p>
   </article>
 </div>
 </body>
