--- a/pages/art.html
+++ b/pages/art.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quartett - Religion</title>
-  <link rel="stylesheet" href="/pages/style/religion.css">
+  <title>Quartett - Art</title>
+  <link rel="stylesheet" href="/pages/style/art.css">
   <link rel="icon" type="image/x-icon" href="../favicon/favicon.ico">
 </head>
 <body>
