--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="/pages/art.html">Art</a>
       <a href="/pages/social.html">Social Studies</a>
       <a href="/pages/international.html">International Collaboration</a>
+      <a href="/pages/interview_social.html">Universal</a>
     </div>
   </nav>
   <header class="flex-column">
