--- a/pages/interview_social.html
+++ b/pages/interview_social.html
@@ -18,6 +18,7 @@
       <a href="/pages/art.html">Art</a>
       <a href="/pages/social.html">Social Studies</a>
       <a href="/pages/international.html">International Collaboration</a>
+      <a href="/pages/scholarship.html">Scholarship</a>
     </div>
   </nav>
 </div>
