--- a/pages/art.html
+++ b/pages/art.html
@@ -16,11 +16,15 @@
         <a href="/">Home</a>
         <a href="/pages/religion.html">Religion</a>
         <a href="/pages/art.html">Art</a>
-        <a href="/pages/social.html">Social Studies</a>
+        <a href="social.html">Social Studies</a>
         <a href="/pages/international.html">International Collaboration</a>
         <a href="/pages/scholarship.html">Scholarship</a>
       </div>
     </nav>
+    <div class="text-box">
+    <p>
+      What is art? When you ask 100 people this question you get many different answers. Why is that the case? There is no wrong answer to what art is. And everyone interprets what art is on their own. For example, someone may think that developing games is art, but others can deny it. What we consider art is something that someone put their heart and soul into their craft. It may be some painting or even carpentry. Lately, there has been a debate if AI art is art. If we go by the definition of what we consider art, then no. But Artificial intelligence may not create art, but isn’t the AI itself art? Hard to say. Many artists disagree. And that can be understood. Many AI engineers don’t ask for permission from artists if they can use their art for training AI and that is a crime. Many original styles have been stolen from them. How can we regulate that?    </p>
+    </div>
   </div>
 </body>
 </html>
