--- a/pages/scholarship.html
+++ b/pages/scholarship.html
@@ -16,11 +16,16 @@
         <a href="/">Home</a>
         <a href="/pages/religion.html">Religion</a>
         <a href="/pages/art.html">Art</a>
-        <a href="/pages/social.html">Social Studies</a>
+        <a href="social.html">Social Studies</a>
         <a href="/pages/international.html">International Collaboration</a>
         <a href="/pages/scholarship.html">Scholarship</a>
       </div>
     </nav>
+    <div class="text-box">
+      <p>
+        Every country's education system differs so we can talk only about our experiences. We, as students at a technical school, think that ours is lacking, and there are many different reasons. The biggest is a lack of teachers. Teaching is just not worth it. Not only financially but also mentally. First, you need to take care of all your students and there is a high chance that they will be annoying. Second, there will surely be students that will not study before tests and get bad grades and then it will be your problem. And so, it is easier to get everyone a passing mark and so students will graduate from school without any needed knowledge. Then there is also the problem that schools don’t get enough donations. Most of our school equipment is old or broken. The final problem is that the education system itself is old. Some things might have worked 50 years ago, but in this day and age, they don’t. Especially in our field. New innovations are made every day and teaching how it was done 30 years ago and punishing those, who try to make it by modern standards is just not a great idea.
+      </p>
+    </div>
   </div>
 </body>
 </html>
