--- a/pages/religion.html
+++ b/pages/religion.html
@@ -16,7 +16,7 @@
         <a href="/">Home</a>
         <a href="/pages/religion.html">Religion</a>
         <a href="/pages/art.html">Art</a>
-        <a href="/pages/social.html">Social Studies</a>
+        <a href="social.html">Social Studies</a>
         <a href="/pages/international.html">International Collaboration</a>
         <a href="/pages/scholarship.html">Scholarship</a>
       </div>
