fix: route change

--- a/art.html
+++ b/art.html
@@ -5,20 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quartett - Art</title>
-  <link rel="stylesheet" href="/pages/style/art.css">
-  <link rel="icon" type="image/x-icon" href="../favicon/favicon.ico">
+  <link rel="stylesheet" href="art.css">
+  <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
 </head>
 <body>
   <div class="container">
     <nav>
-      <a href="/">Quartett</a>
+      <a href="index.html">Quartett</a>
       <div class="links">
-        <a href="/">Home</a>
-        <a href="/pages/religion.html">Religion</a>
-        <a href="/pages/art.html">Art</a>
+        <a href="index.html">Home</a>
+        <a href="religion.html">Religion</a>
+        <a href="art.html">Art</a>
         <a href="social.html">Social Studies</a>
-        <a href="/pages/international.html">International Collaboration</a>
-        <a href="/pages/scholarship.html">Scholarship</a>
+        <a href="international.html">International Collaboration</a>
+        <a href="education.html">Education</a>
       </div>
     </nav>
     <div class="text-box">
