--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
   <div class="container">
   <nav>
-    <a href="/">Quartett</a>
+    <a href="index.html">Quartett</a>
     <div class="links">
-      <a href="/">Home</a>
-      <a href="/pages/religion.html">Religion</a>
-      <a href="/pages/art.html">Art</a>
+      <a href="index.html">Home</a>
+      <a href="religion.html">Religion</a>
+      <a href="art.html">Art</a>
       <a href="social.html">Social Studies</a>
-      <a href="/pages/international.html">International Collaboration</a>
-      <a href="/pages/scholarship.html">Scholarship</a>
-      <a href="/pages/interview_social.html">Universal</a>
+      <a href="international.html">International Collaboration</a>
+      <a href="education.html">Education</a>
+      <a href="interview_social.html">Universal</a>
     </div>
   </nav>
   <header class="flex-column">
@@ -29,7 +29,7 @@
   </header>
   <article class="text-box">
     <p>
-      This project will show you the potential future of quartett, that we hope will come true. You will learn about some basic information, but you will also listen to some interviews with people who have something to say about that matter in particular. You are going to learn about religion, art, languages and more.</p>
+      This project will show you the potential future of Quartett, that we hope will come true. You will learn about some basic information, but you will also listen to some interviews with people who have something to say about that matter in particular. You are going to learn about religion, art, languages, social studies, international collaboration and education.</p>
   </article>
 </div>
 </body>
