feat: add transition and dropdown menu

--- a/index.html
+++ b/index.html
@@ -13,13 +13,42 @@
   <nav>
     <a href="index.html">Quartett</a>
     <div class="links">
-      <a href="index.html">Home</a>
-      <a href="religion.html">Religion</a>
-      <a href="art.html">Art</a>
-      <a href="social.html">Social Studies</a>
-      <a href="international.html">International Collaboration</a>
-      <a href="education.html">Education</a>
-      <a href="interview_social.html">Universal</a>
+      <a href="index.html" class="dropbtn">Home</a>
+      <div class="dropdown">
+        <div class="dropbtn">Religion</div>
+        <div class="dropdown-content">
+          <a href="religion.html">Text</a>
+          <a href="/">Interview</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <div class="dropbtn">Art</div>
+        <div class="dropdown-content">
+          <a href="art.html">Text</a>
+          <a href="/">Interview</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <div class="dropbtn">Social Studies</div>
+        <div class="dropdown-content">
+          <a href="social.html">Text</a>
+          <a href="interview_social.html">Interview</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <div class="dropbtn">International Collaboration</div>
+        <div class="dropdown-content">
+          <a href="international.html">Text</a>
+          <a href="/">Interview</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <div class="dropbtn">Education</div>
+        <div class="dropdown-content">
+          <a href="education.html">Text</a>
+          <a href="/">Interview</a>
+        </div>
+      </div>
     </div>
   </nav>
   <header class="flex-column">
@@ -30,7 +59,8 @@
   <article class="text-box">
     <p>
       This project will show you the potential future of Quartett, that we hope will come true. You will learn about some basic information, but you will also listen to some interviews with people who have something to say about that matter in particular. You are going to learn about religion, art, languages, social studies, international collaboration and education.</p>
-  </article>
+    </article>
+    
 </div>
 </body>
 </html>
