--- a/international.html
+++ b/international.html
@@ -13,14 +13,49 @@
     <nav>
       <a href="index.html">Quartett</a>
       <div class="links">
-        <a href="index.html">Home</a>
-        <a href="religion.html">Religion</a>
-        <a href="art.html">Art</a>
-        <a href="social.html">Social Studies</a>
-        <a href="international.html">International Collaboration</a>
-        <a href="education.html">Education</a>
+        <a href="index.html" class="dropbtn">Home</a>
+      <div class="dropdown">
+        <div class="dropbtn">Religion</div>
+        <div class="dropdown-content">
+          <a href="religion.html">Text</a>
+          <a href="/">Interview</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <div class="dropbtn">Art</div>
+        <div class="dropdown-content">
+          <a href="art.html">Text</a>
+          <a href="/">Interview</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <div class="dropbtn">Social Studies</div>
+        <div class="dropdown-content">
+          <a href="social.html">Text</a>
+          <a href="interview_social.html">Interview</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <div class="dropbtn">International Collaboration</div>
+        <div class="dropdown-content">
+          <a href="international.html">Text</a>
+          <a href="/">Interview</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <div class="dropbtn">Education</div>
+        <div class="dropdown-content">
+          <a href="education.html">Text</a>
+          <a href="/">Interview</a>
+        </div>
+      </div>
       </div>
     </nav>
+    <article class="text-box">
+      <p>
+        The four regions of Quartett have collaborated on international initiatives from the creation of Quartett to the present day to promote economic growth, cultural exchange, and international collaboration. These collaborations have focused on tourism, education, and economic sectors such as manufacturing, agriculture, and renewable energy. Joint marketing campaigns and the development of regional tourism routes have attracted international tourists to all four regions. Partnerships between universities and educational institutions have led to student and academic exchanges, joint research projects, and academic conferences. In economic sectors, partnerships have led to joint ventures and the development of innovative technologies. The collaboration between these regions has contributed to the overall development of the European Union and has benefited both the individual regions and the European community as a whole.
+      </p>
+    </article>
   </div>
 </body>
 </html>
