--- a/social.html
+++ b/social.html
@@ -13,14 +13,49 @@
     <nav>
       <a href="index.html">Quartett</a>
       <div class="links">
-        <a href="index.html">Home</a>
-        <a href="religion.html">Religion</a>
-        <a href="art.html">Art</a>
-        <a href="social.html">Social Studies</a>
-        <a href="international.html">International Collaboration</a>
-        <a href="education.html">Education</a>
+        <a href="index.html" class="dropbtn">Home</a>
+        <div class="dropdown">
+          <div class="dropbtn">Religion</div>
+          <div class="dropdown-content">
+            <a href="religion.html">Text</a>
+            <a href="/">Interview</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <div class="dropbtn">Art</div>
+          <div class="dropdown-content">
+            <a href="art.html">Text</a>
+            <a href="/">Interview</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <div class="dropbtn">Social Studies</div>
+          <div class="dropdown-content">
+            <a href="social.html">Text</a>
+            <a href="interview_social.html">Interview</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <div class="dropbtn">International Collaboration</div>
+          <div class="dropdown-content">
+            <a href="international.html">Text</a>
+            <a href="/">Interview</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <div class="dropbtn">Education</div>
+          <div class="dropdown-content">
+            <a href="education.html">Text</a>
+            <a href="/">Interview</a>
+          </div>
+        </div>
       </div>
     </nav>
+    <article class="text-box">
+      <p>
+        Burgundy-Franche-Comté, Opole county, Central Bohemian, and Rhineland-Palatinate are regions located in Europe with unique economic and political characteristics that have evolved over the past two decades. Burgundy-Franche-Comté's economy has been driven by its wine industry and has seen a shift towards socialist governments focusing on sustainable development. Opole county has experienced a transformation towards high-tech manufacturing and service industries and has been governed by a mixture of conservative and liberal parties with a focus on economic growth. Central Bohemian's economy has been driven by its manufacturing industry and has been governed by a mixture of center-right and center-left parties with a focus on regional development and cultural preservation. Rhineland-Palatinate's economy has also been driven by its wine industry and has been governed by a mixture of center-right and center-left parties with a focus on sustainable development and public services. Despite facing various challenges, all four regions have maintained their distinctive cultural heritage and promoted sustainable development.
+      </p>
+    </article>
   </div>
 </body>
 </html>
