feat: add interview page

--- a/interview_social.html
+++ b/interview_social.html
@@ -51,6 +51,42 @@
       </div>
     </div>
   </nav>
+  <article>
+    <div class="box">
+      <div class="interview-box">
+        <div class="interview-image">
+          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+        </div>
+        <div class="interview-text">
+          <h2>Ing. Aleš Fojtík, PhD.</h2>
+          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
+            having rich experience in the finance world and appearing on television
+            frequently.
+          </p>
+          <p class="transcript">
+            Audio Transcript
+          </p>
+          <audio controls src="fojtik.mp3"></audio>
+        </div>
+      </div>
+    </div>
+    <div class="box">
+      <div class="interview-box">
+        <div class="interview-image">
+          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+        </div>
+        <div class="interview-text">
+          <h2>Ing. Aleš Fojtík, PhD.</h2>
+          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
+            having rich experience in the finance world and appearing on television
+            frequently.
+          </p>
+          <p class="transcript">Audio Transcript</p>
+          <audio controls src="fojtik.mp3"></audio>
+        </div>
+      </div>
+    </div>
+  </article>
 </div>
 </body>
 </html>
