feat: interview page finished

--- a/interview_social.html
+++ b/interview_social.html
@@ -57,14 +57,16 @@
         <div class="interview-image">
           <img src="fojtik.png" alt="Image of Aleš Fojtík" />
         </div>
-        <div class="interview-text">
+        <div>
           <h2>Ing. Aleš Fojtík, PhD.</h2>
           <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
             having rich experience in the finance world and appearing on television
             frequently.
           </p>
           <p class="transcript">
-            Audio Transcript
+            <a>
+              Audio Transcript
+            </a>
           </p>
           <audio controls src="fojtik.mp3"></audio>
         </div>
@@ -81,7 +83,11 @@
             having rich experience in the finance world and appearing on television
             frequently.
           </p>
-          <p class="transcript">Audio Transcript</p>
+          <p class="transcript">
+            <a>
+              Audio Transcript
+            </a>
+          </p>
           <audio controls src="fojtik.mp3"></audio>
         </div>
       </div>
