--- a/interview_social.html
+++ b/interview_social.html
@@ -64,7 +64,7 @@
             frequently.
           </p>
           <p class="transcript">
-            <a>
+            <a href="Quartett.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
@@ -84,7 +84,7 @@
             frequently.
           </p>
           <p class="transcript">
-            <a>
+            <a href="Quartett.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
