--- a/interview_social.html
+++ b/interview_social.html
@@ -18,14 +18,14 @@
         <div class="dropbtn">Religion</div>
         <div class="dropdown-content">
           <a href="religion.html">Text</a>
-          <a href="/">Interview</a>
+          <a href="interview_religion.html">Interview</a>
         </div>
       </div>
       <div class="dropdown">
         <div class="dropbtn">Art</div>
         <div class="dropdown-content">
           <a href="art.html">Text</a>
-          <a href="/">Interview</a>
+          <a href="interview_art.html">Interview</a>
         </div>
       </div>
       <div class="dropdown">
@@ -39,14 +39,14 @@
         <div class="dropbtn">International Collaboration</div>
         <div class="dropdown-content">
           <a href="international.html">Text</a>
-          <a href="/">Interview</a>
+          <a href="interview_collaboration.html">Interview</a>
         </div>
       </div>
       <div class="dropdown">
         <div class="dropbtn">Education</div>
         <div class="dropdown-content">
           <a href="education.html">Text</a>
-          <a href="/">Interview</a>
+          <a href="interview_education.html">Interview</a>
         </div>
       </div>
     </div>
