--- a/interview_art.html
+++ b/interview_art.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quartett - Home</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Quartett - Art Interview</title>
+  <link rel="stylesheet" href="interview.css">
   <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
 </head>
 <body>
@@ -51,15 +51,47 @@
       </div>
     </div>
   </nav>
-  <header class="flex-column">
-    <h2>
-      Germany, Czech Republic, France & </br>
-    Poland together form the <span class="light-blue-text">Quartett</span></h2> 
-  </header>
-  <article class="text-box">
-    <p>
-      This project will show you the potential future of Quartett, that we hope will come true. You will learn about some basic information, but you will also listen to some interviews with people who have something to say about that matter in particular. You are going to learn about religion, art, languages, social studies, international collaboration and education.</p>
-    </article>
+  <article>
+    <div class="box">
+      <div class="interview-box">
+        <div class="interview-image">
+          <img src="nuhlickova.png" alt="Image of Eliška Nuhlíčková" />
+        </div>
+        <div>
+          <h2>Bc. Eliška Nuhlíčková</h2>
+          <p>Eliška Nuhlíčková is a current computer graphics teacher at our school
+            and she herself studies art at the university in Hradec Králové.
+          </p>
+          <p class="transcript">
+            <a href="Quartett.pdf" target="_blank">
+              Audio Transcript
+            </a>
+          </p>
+          <audio controls src="nuhlickova.mp3"></audio>
+        </div>
+      </div>
+    </div>
+    <div class="box">
+      <div class="interview-box">
+        <div class="interview-image">
+          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+        </div>
+        <div class="interview-text">
+          <h2>Ing. Aleš Fojtík, PhD.</h2>
+          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
+            having rich experience in the finance world and appearing on television
+            frequently.
+          </p>
+          <p class="transcript">
+            <a href="Quartett.pdf" target="_blank">
+              Audio Transcript
+            </a>
+          </p>
+          <audio controls src="fojtik.mp3"></audio>
+        </div>
+      </div>
+    </div>
+  </article>
 </div>
 </body>
 </html>
