--- a/interview_social.html
+++ b/interview_social.html
@@ -64,7 +64,7 @@
             frequently.
           </p>
           <p class="transcript">
-            <a href="fojtik.pdf" target="_blank">
+            <a href="fojtik_transcript.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
