--- a/interview_education.html
+++ b/interview_education.html
@@ -55,20 +55,20 @@
     <div class="box">
       <div class="interview-box">
         <div class="interview-image">
-          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+          <img src="krulisova.png" alt="Image of Anita Krulišová" />
         </div>
         <div>
-          <h2>Ing. Aleš Fojtík, PhD.</h2>
-          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
-            having rich experience in the finance world and appearing on television
-            frequently.
+          <h2>Mgr. Anita Krulišová</h2>
+          <p>Anita Krulišová is a current Czech language and also a History teacher, 
+            teaching students in a more modern way than other teachers
+            do.
           </p>
           <p class="transcript">
             <a href="Quartett.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
-          <audio controls src="fojtik.mp3"></audio>
+          <audio controls src="krulisova.mp3"></audio>
         </div>
       </div>
     </div>
