feat: add Treml and Drachova interview

--- a/interview_art.html
+++ b/interview_art.html
@@ -74,20 +74,20 @@
     <div class="box">
       <div class="interview-box">
         <div class="interview-image">
-          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+          <img src="drachova.png" alt="Image of Lenka Drachová" />
         </div>
         <div class="interview-text">
-          <h2>Ing. Aleš Fojtík, PhD.</h2>
-          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
-            having rich experience in the finance world and appearing on television
-            frequently.
+          <h2>Mgr. Lenka Drachová</h2>
+          <p>Lenka Drachová is a current teacher at our school,
+            teaching math, information technology and multimedia.
+            She's also an organiser for ERASMUS+.
           </p>
           <p class="transcript">
             <a href="Quartett.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
-          <audio controls src="fojtik.mp3"></audio>
+          <audio controls src="drachova.mp3"></audio>
         </div>
       </div>
     </div>
