--- a/interview_collaboration.html
+++ b/interview_collaboration.html
@@ -55,20 +55,19 @@
     <div class="box">
       <div class="interview-box">
         <div class="interview-image">
-          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+          <img src="treml.png" alt="Image of Josef Treml" />
         </div>
         <div>
-          <h2>Ing. Aleš Fojtík, PhD.</h2>
-          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
-            having rich experience in the finance world and appearing on television
-            frequently.
+          <h2>Ing. Josef Treml</h2>
+          <p>Josef Treml is a current headmaster and a teacher at our school,
+            teaching electrotechnic subjects such as mechanical engineering.
           </p>
           <p class="transcript">
             <a href="Quartett.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
-          <audio controls src="fojtik.mp3"></audio>
+          <audio controls src="treml.mp3"></audio>
         </div>
       </div>
     </div>
