feat: add interview transcript

--- a/interview_education.html
+++ b/interview_education.html
@@ -64,7 +64,7 @@
             do.
           </p>
           <p class="transcript">
-            <a href="Quartett.pdf" target="_blank">
+            <a href="krulisova_transcript.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
