--- a/interview_collaboration.html
+++ b/interview_collaboration.html
@@ -11,45 +11,59 @@
 <body>
   <div class="container">
   <nav>
-    <a href="index.html">Quartett</a>
-    <div class="links">
-      <a href="index.html" class="dropbtn">Home</a>
-      <div class="dropdown">
-        <div class="dropbtn">Religion</div>
-        <div class="dropdown-content">
-          <a href="religion.html">Text</a>
-          <a href="interview_religion.html">Interview</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <div class="dropbtn">Art</div>
-        <div class="dropdown-content">
-          <a href="art.html">Text</a>
-          <a href="interview_art.html">Interview</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <div class="dropbtn">Social Studies</div>
-        <div class="dropdown-content">
-          <a href="social.html">Text</a>
-          <a href="interview_social.html">Interview</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <div class="dropbtn">International Collaboration</div>
-        <div class="dropdown-content">
-          <a href="international.html">Text</a>
-          <a href="interview_collaboration.html">Interview</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <div class="dropbtn">Education</div>
-        <div class="dropdown-content">
-          <a href="education.html">Text</a>
-          <a href="interview_education.html">Interview</a>
-        </div>
-      </div>
+    <a href="index.html">
+      <h1>
+      Quartett
+    </h1>
+  </a>
+  <div class="links">
+    <a class="dropbtn" href="index.html">Home</a>
+  <div class="dropdown">
+    <div class="dropbtn">
+      <a href="religion.html">Religion</a>
     </div>
+    <div class="dropdown-content">
+      <a href="religion.html">Text</a>
+      <a href="interview_religion.html">Interview</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <div class="dropbtn">
+      <a href="art.html">Art</a>
+    </div>
+    <div class="dropdown-content">
+      <a href="art.html">Text</a>
+      <a href="interview_art.html">Interview</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <div class="dropbtn">
+      <a href="social.html">Social Studies</a>
+    </div>
+    <div class="dropdown-content">
+      <a href="social.html">Text</a>
+      <a href="interview_social.html">Interview</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <div class="dropbtn">
+      <a href="international.html">International Collaboration</a>
+    </div>
+    <div class="dropdown-content">
+      <a href="international.html">Text</a>
+      <a href="interview_collaboration.html">Interview</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <div  class="dropbtn">
+      <a href="education.html">Education</a>
+    </div>
+    <div class="dropdown-content">
+      <a href="education.html">Text</a>
+      <a href="interview_education.html">Interview</a>
+    </div>
+  </div>
+  </div>
   </nav>
   <article>
     <div class="box">
