--- a/interview_education.html
+++ b/interview_education.html
@@ -89,20 +89,20 @@
     <div class="box">
       <div class="interview-box">
         <div class="interview-image">
-          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+          <img src="nuhlicek.png" alt="Image of Josef Nuhlíček" />
         </div>
         <div class="interview-text">
-          <h2>Ing. Aleš Fojtík, PhD.</h2>
-          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
-            having rich experience in the finance world and appearing on television
-            frequently.
+          <h2>Josef Nuhlíček</h2>
+          <p>Josef Nuhlíček is a teacher at our school,
+            having rich experience with the Python programming language and
+            teaching programming and automatization.
           </p>
           <p class="transcript">
             <a href="Quartett.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
-          <audio controls src="fojtik.mp3"></audio>
+          <audio controls src="nuhlicek.mp3"></audio>
         </div>
       </div>
     </div>
