--- a/interview_social.html
+++ b/interview_social.html
@@ -89,20 +89,19 @@
     <div class="box">
       <div class="interview-box">
         <div class="interview-image">
-          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+          <img src="kolar.png" alt="Image of Martin Kolář" />
         </div>
         <div class="interview-text">
-          <h2>Ing. Aleš Fojtík, PhD.</h2>
-          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
-            having rich experience in the finance world and appearing on television
-            frequently.
+          <h2>Mgr. Martin Kolář</h2>
+          <p>Martin Kolář is a current leader of the Pirate political group in Čáslav,
+            teacher at our school and has plenty of work experience in the IT business.
           </p>
           <p class="transcript">
             <a href="Quartett.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
-          <audio controls src="fojtik.mp3"></audio>
+          <audio controls src="kolar.mp3"></audio>
         </div>
       </div>
     </div>
