--- a/interview_collaboration.html
+++ b/interview_collaboration.html
@@ -73,7 +73,7 @@
         </div>
         <div>
           <h2>Ing. Josef Treml</h2>
-          <p>Josef Treml is a current headmaster and a teacher at our school,
+          <p>Josef Treml is a current member of ODS political party, headmaster and a teacher at our school,
             teaching electrotechnic subjects such as mechanical engineering.
           </p>
           <p class="transcript">
