--- a/interview_social.html
+++ b/interview_social.html
@@ -93,7 +93,7 @@
         </div>
         <div class="interview-text">
           <h2>Mgr. Martin Kolář</h2>
-          <p>Martin Kolář is a current leader of the Pirate political group in Čáslav,
+          <p>Martin Kolář is a current leader of the Pirate political party in Čáslav,
             teacher at our school and has plenty of work experience in the IT business.
           </p>
           <p class="transcript">
