feat: add interview transcript

--- a/interview_art.html
+++ b/interview_art.html
@@ -94,10 +94,10 @@
           <h2>Mgr. Lenka Drachová</h2>
           <p>Lenka Drachová is a current teacher at our school,
             teaching math, information technology and multimedia.
-            She's also an organiser for ERASMUS+.
+            She's also an organiser for ERASMUS+ at our school.
           </p>
           <p class="transcript">
-            <a href="Quartett.pdf" target="_blank">
+            <a href="drachova_transcript.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
