--- a/interview_social.html
+++ b/interview_social.html
@@ -97,7 +97,7 @@
             teacher at our school and has plenty of work experience in the IT business.
           </p>
           <p class="transcript">
-            <a href="Quartett.pdf" target="_blank">
+            <a href="kolar_transcript.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
