feat: add cablikova

--- a/interview_religion.html
+++ b/interview_religion.html
@@ -69,20 +69,20 @@
     <div class="box">
       <div class="interview-box">
         <div class="interview-image">
-          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+          <img src="cablikova.png" alt="Image of Aleš Fojtík" />
         </div>
         <div>
-          <h2>Ing. Aleš Fojtík, PhD.</h2>
-          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
-            having rich experience in the finance world and appearing on television
-            frequently.
+          <h2>Ing. arch. Eva Čablíková Bc.</h2>
+          <p>Eva Čablíková is a current teacher at our school,
+            primarily teaching math and physics. She also like drawing and 
+            any type of puzzles.
           </p>
           <p class="transcript">
             <a href="Quartett.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
-          <audio controls src="fojtik.mp3"></audio>
+          <audio controls src="cablikova.mp3"></audio>
         </div>
       </div>
     </div>
