fix: navbar animation

--- a/social.html
+++ b/social.html
@@ -19,49 +19,39 @@
     <div class="links">
       <a class="dropbtn" href="index.html">Home</a>
     <div class="dropdown">
-      <div class="dropbtn">
-        <a href="religion.html">Religion</a>
-      </div>
-      <div class="dropdown-content">
-        <a href="religion.html">Text</a>
-        <a href="interview_religion.html">Interview</a>
-      </div>
+       <a class="dropbtn" href="religion.html">Religion</a>
+    <div class="dropdown-content">
+      <a href="religion.html">Text</a>
+      <a href="interview_religion.html">Interview</a>
     </div>
-    <div class="dropdown">
-      <div class="dropbtn">
-        <a href="art.html">Art</a>
-      </div>
-      <div class="dropdown-content">
-        <a href="art.html">Text</a>
-        <a href="interview_art.html">Interview</a>
-      </div>
+  </div>
+  <div class="dropdown">
+      <a class="dropbtn" href="art.html">Art</a>
+    <div class="dropdown-content">
+      <a href="art.html">Text</a>
+      <a href="interview_art.html">Interview</a>
     </div>
-    <div class="dropdown">
-      <div class="dropbtn">
-        <a href="social.html">Social Studies</a>
-      </div>
-      <div class="dropdown-content">
-        <a href="social.html">Text</a>
-        <a href="interview_social.html">Interview</a>
-      </div>
+  </div>
+  <div class="dropdown">
+      <a class="dropbtn" href="social.html">Social Studies</a>
+    <div class="dropdown-content">
+      <a href="social.html">Text</a>
+      <a href="interview_social.html">Interview</a>
     </div>
-    <div class="dropdown">
-      <div class="dropbtn">
-        <a href="international.html">International Collaboration</a>
-      </div>
-      <div class="dropdown-content">
-        <a href="international.html">Text</a>
-        <a href="interview_collaboration.html">Interview</a>
-      </div>
+  </div>
+  <div class="dropdown">
+      <a class="dropbtn" href="international.html">International Collaboration</a>
+    <div class="dropdown-content">
+      <a href="international.html">Text</a>
+      <a href="interview_collaboration.html">Interview</a>
     </div>
-    <div class="dropdown">
-      <div  class="dropbtn">
-        <a href="education.html">Education</a>
-      </div>
-      <div class="dropdown-content">
-        <a href="education.html">Text</a>
-        <a href="interview_education.html">Interview</a>
-      </div>
+  </div>
+  <div class="dropdown">
+      <a class="dropbtn" href="education.html">Education</a>
+    <div class="dropdown-content">
+      <a href="education.html">Text</a>
+      <a href="interview_education.html">Interview</a>
+    </div>
     </div>
     </div>
     </nav>
