--- a/interview_religion.html
+++ b/interview_religion.html
@@ -82,8 +82,8 @@
           <img src="fojtik.png" alt="Image of Aleš Fojtík" />
         </div>
         <div class="interview-text">
-          <h2>Ing. Aleš Fojtík, PhD.</h2>
-          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
+          <h2>Michal Králik</h2>
+          <p>Michal Králik is a current Chief Revenue Officer (CRO) at Srovnejto Group,
             having rich experience in the finance world and appearing on television
             frequently.
           </p>
@@ -92,7 +92,7 @@
               Audio Transcript
             </a>
           </p>
-          <audio controls src="fojtik.mp3"></audio>
+          <audio controls src="kralik.mp3"></audio>
         </div>
       </div>
     </div>
