feat: add kralik

--- a/interview_religion.html
+++ b/interview_religion.html
@@ -59,7 +59,7 @@
     <div class="box">
       <div class="interview-box">
         <div class="interview-image">
-          <img src="cablikova.png" alt="Image of Aleš Fojtík" />
+          <img src="cablikova.png" alt="Image of Eva Čablíková" />
         </div>
         <div>
           <h2>Ing. arch. Eva Čablíková Bc.</h2>
@@ -79,11 +79,11 @@
     <div class="box">
       <div class="interview-box">
         <div class="interview-image">
-          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+          <img src="kral.png" alt="Image of Michal Král" />
         </div>
         <div class="interview-text">
-          <h2>Michal Králik</h2>
-          <p>Michal Králik is a current Chief Revenue Officer (CRO) at Srovnejto Group,
+          <h2>Michal Král</h2>
+          <p>Michal Král is a current Chief Revenue Officer (CRO) at Srovnejto Group,
             having rich experience in the finance world and appearing on television
             frequently.
           </p>
@@ -92,7 +92,7 @@
               Audio Transcript
             </a>
           </p>
-          <audio controls src="kralik.mp3"></audio>
+          <audio controls src="kral.mp3"></audio>
         </div>
       </div>
     </div>
